--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -142,5 +142,5 @@ extra_javascript:
 nav:
   - Home: index.md
   - Projetos:
-    - Projeto 1: ./projeto/index.md
+    - Projeto 1: ./projeto/main.md
     
