Iniciando Projeto Integrado

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -135,5 +135,6 @@ nav:
   - Home: index.md
   - Projetos:
     - Projeto 1: ./projeto/main.md
-    - Projeto 2: ./projeto2/main.md
+    - Projeto Extra: ./projeto2/main.md
+    - Projeto Integrado: ./projeto3/main.md
     
